# Project-stt

./: README.md  render.yaml
client/: index.html  package-lock.json  package.json
client/src/: app.js  config.js  config.js.save  style.css
server/: .env.example  bot.py  pyproject.toml  requirements.txt
