[project]
name = "stt-js"
version = "0.1.0"
description = "Speech-to-Text demo built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,deepgram,runner,webrtc]>=1.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
